# Messenger

./: .gitignore  CMakeLists.txt  README.md  client_config.xml  db_init.sql  server_config.xml
CMake/: FindOpenSSL.cmake
Client/: CMakeLists.txt  Client.cpp  Client.hpp  ClientErrorCategory.cpp  ClientErrorCategory.hpp  CommandSet.cpp  CommandSet.hpp  Container.cpp  Container.hpp  Container2.cpp  Container2.hpp  Context.cpp  Context.hpp  Main.cpp  Main.hpp  Tasker.cpp  Tasker.hpp  TextProcessor.cpp  TextProcessor.hpp
Commons/: CMakeLists.txt  Data.hpp  DataBuffers.hpp  Network.hpp  System.hpp
Commons/Data/: Buffer.cpp  Buffer.hpp  BufferComposer.cpp  BufferComposer.hpp  BufferDecomposer.cpp  BufferDecomposer.hpp  ChatInfo.cpp  ChatInfo.hpp  ChatInfoPack.cpp  ChatInfoPack.hpp  ChatMessage.cpp  ChatMessage.hpp  ChatMessagePack.cpp  ChatMessagePack.hpp  DataPack.hpp  IReceivable.hpp  ISendable.hpp  ITriviallyReceivable.hpp  PrimitiveTypes.hpp  SessionInfo.cpp  SessionInfo.hpp  Types.hpp  UserInfo.cpp  UserInfo.hpp
Commons/Network/: IMessage.hpp  Message.cpp  Message.hpp  MessageRepresentation.cpp  MessageRepresentation.h  MessageRepresentation.hpp  NetworkCategory.hpp  NetworkErrorCategory.cpp  NetworkErrorCategory.hpp  NetworkTypes.hpp  Purpose.hpp  Purpose.md  PurposeBytes.hpp  SslConnection.cpp  SslConnection.hpp  Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp
Commons/System/: BaseContext.cpp  BaseContext.hpp  Context.cpp  Context.hpp  Error.cpp  Error.hpp  ErrorCategory.hpp  ErrorCode.cpp  ErrorCode.hpp  Exception.cpp  Exception.h  Exception.hpp  GenericCategory.hpp  GenericErrorCategory.cpp  GenericErrorCategory.hpp
Google_tests/: BufferComposerTests.cpp  BufferTests.cpp  CMakeLists.txt  MessageTests.cpp
Server/: CMakeLists.txt  Connection.cpp  Connection.hpp  Context.cpp  Context.hpp  Main.cpp  Main.hpp  Server.cpp  Server.hpp
Server/Database/: AbstractDao.h  ChatDao.cpp  ChatDao.h  DbException.h  DbPool.cpp  DbPool.h  MessageDao.cpp  MessageDao.h  SessionDao.cpp  SessionDao.h  TemplateDao.h  UserDao.cpp  UserDao.h
doc/: Проектирование ПО.docx
example/: dh2048.pem  root_ca.pem  server.pem  server_key.pem
